<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_shadow_white"
    tools:context=".fragments.ProfileFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_add_image"
                android:scaleType="centerCrop"
                app:civ_border_color="?attr/colorOnSecondary"
                app:civ_border_width="3dp" />

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:text="@string/user_name"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textColor="?attr/colorOnSurface"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
               >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="?colorSecondary"
                        android:elevation="2dp"
                        app:contentPadding="8dp"
                        app:shapeAppearance="?shapeAppearanceSmallComponent"
                        app:srcCompat="@drawable/baseline_email_24"
                        app:tint="?colorOnSecondary"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/txtUserEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/enter_email"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/icon_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="?colorSecondary"
                        android:elevation="2dp"
                        app:contentPadding="8dp"
                        app:shapeAppearance="?shapeAppearanceSmallComponent"
                        app:srcCompat="@drawable/baseline_phone_android_24"
                        app:tint="?colorOnSecondary"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/txtUserPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/enter_phone"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnMyPosts"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="?colorSecondary"
                        android:elevation="2dp"
                        app:contentPadding="8dp"
                        app:shapeAppearance="?shapeAppearanceSmallComponent"
                        app:srcCompat="@drawable/baseline_phone_android_24"
                        app:tint="?colorOnSecondary"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_books"
                        android:textAppearance="?attr/textAppearanceTitleMedium" />
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_margin="10dp"
                            android:background="?colorSecondary"
                            android:elevation="2dp"
                            app:contentPadding="8dp"
                            app:shapeAppearance="?shapeAppearanceSmallComponent"
                            app:srcCompat="@drawable/baseline_arrow_forward_ios_24"
                            app:tint="?colorOnSecondary"
                            tools:ignore="UnusedAttribute" />
                    </FrameLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <Button
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:paddingVertical="16dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        app:icon="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2" />
</FrameLayout>


    <Button
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:id="@+id/btnSignout"
        android:layout_width="match_parent"
        android:paddingVertical="16dp"
        android:layout_height="wrap_content"
        android:text="@string/signout"
        app:icon="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2" />


</LinearLayout>